# RustcGenie

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/component-extractor/: Cargo.toml  README.md
crates/component-extractor/src/: kind_family.rs  lib.rs  main.rs  parse.rs  snippet.rs
crates/genie-251215/: Cargo.toml  README.md
crates/genie-251215/src/: code_structure.rs  compatibility.rs  lib.rs  main.rs  mutator.rs  range_utils.rs  replacement.rs  seed_filter.rs  snippet.rs
crates/ice-oracle/: Cargo.toml  README.md
crates/ice-oracle/src/: command.rs  config.rs  dedup.rs  executor.rs  lib.rs  main.rs  parser.rs  report.rs  result.rs
crates/ice-oracle/tests/: debug_limits.rs  test_debug_limits.sh
crates/ice-oracle/tests/fixtures/: 150061.rs
crates/ice-perfeval-blackbox/: Cargo.toml  README.md
crates/ice-perfeval-blackbox/src/: collector.rs  main.rs  mutator.rs
crates/llm-extractor/: Cargo.toml  README.md
crates/llm-extractor/prompts/: end.txt  front.txt
crates/llm-extractor/scripts/: extract-batch.sh
crates/llm-extractor/src/: annotate.rs  batch.rs  infer.rs  json_parse.rs  lib.rs  llm_client.rs  llm_output.rs  main.rs  prompt.rs  strip_ws.rs
patches/: icemaker-fix1219.patch
