[package]
name = "ice-oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fastrand = "2"
rayon = "1.10"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
walkdir = "2"
wait-timeout = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
