[package]
name = "ice-perfeval-blackbox"
version = "0.1.0"
edition = "2024"

[dependencies]
ice-oracle = { path = "../ice-oracle" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
